--- a/baccarat.html
+++ b/baccarat.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
     <link rel="amphtml" href="http://via.dlshoping.com/play/777/">
-    <link rel="canonical" href="http://viaplay777.librecat.org/baccarat-online.html">
+    <link rel="canonical" href="http://viaplay777.librecat.org/baccarat.html">
     <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     <title>Situs Daftar Judi Baccarat Online Live Casino Bakarat 24 Jam</title>
     <meta name="description" content="Baccarat adalah situs daftar judi bakarat online terpercaya di bandar promo bonus rollingan terbesar, mainkan baccarat live casino 24 jam disini.">
@@ -19,7 +19,7 @@
     <meta property="og:locale" content="id_ID"/>
     <meta property="og:locale:alternate" content="en_ID"/>
 	<meta property="og:site_name" content="Baccarat Online">
-    <meta property="og:url" content="http://viaplay777.librecat.org/baccarat-online.html">
+    <meta property="og:url" content="http://viaplay777.librecat.org/baccarat.html">
     <meta property="og:title" content="Situs Daftar Judi Baccarat Online Live Casino Bakarat 24 Jam">
     <meta property="og:type" content="product">
     <meta property="og:description" content="Baccarat adalah situs daftar judi bakarat online terpercaya di bandar promo bonus rollingan terbesar, mainkan baccarat live casino 24 jam disini.">
@@ -38,7 +38,7 @@
         "@type": "NewsArticle",
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "http://viaplay777.librecat.org/baccarat-online.html"
+          "@id": "http://viaplay777.librecat.org/baccarat.html"
         },
         "headline": "Situs Daftar Judi Baccarat Online Live Casino Bakarat 24 Jam",
         "description": "Baccarat adalah situs daftar judi bakarat online terpercaya di bandar promo bonus rollingan terbesar, mainkan baccarat live casino 24 jam disini.",
@@ -46,7 +46,7 @@
         "author": {
           "@type": "Organization",
           "name": "Baccarat Online",
-          "url": "http://viaplay777.librecat.org/baccarat-online.html"
+          "url": "http://viaplay777.librecat.org/baccarat.html"
         },
         "publisher": {
           "@type": "Organization",
@@ -68,7 +68,7 @@
       window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');
     </script>
     <meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/85066645804/digital_wallets/dialog">
-    <link rel="alternate" type="application/json+oembed" href="http://viaplay777.librecat.org/baccarat-online.html.oembed">
+    <link rel="alternate" type="application/json+oembed" href="http://viaplay777.librecat.org/baccarat.html.oembed">
     <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhRpiAhoHIL6LjNJ0Pcjoz_iDuf4ph1hgceUYvEz1XRKpegZQUtOjggA7zELwJWrZF-5q5bjRm-TGWUFQSVDkQncwu42Nph6ZaJ8WmiIdka_1dOLnjOI2rlpaX4quttrlTgneO5ovHDTYPGJTz5YkC-3Gmhj82hIBEzt1uC3Ew_wAlgIreMjnlxyQK66let/s32/pavicon.ico" type="image/x-icon"/>
     <script async="async" src="/checkouts/internal/preloads.js?permanent-domain=96f7bb.myshopify.com&locale=en-ID"></script>
     <script id="shopify-features" type="application/json">
@@ -733,8 +733,8 @@
         }).src, y = p.async, h = void 0 === y || y, v = p.onload, m = p.onerror, w = document.createElement("script"), g = document.head, b = document.body, w.async = h, w.src = f, v && w.addEventListener("load", v), m && w.addEventListener("error", m), g ? g.appendChild(w) : b ? b.appendChild(w) : console.error("Did not find a head or body element to append the script")
       })({
         shopId: 85066645804,
-        storefrontBaseUrl: "http://viaplay777.librecat.org/baccarat-online.html",
-        cdnBaseUrl: "http://viaplay777.librecat.org/baccarat-online.html",
+        storefrontBaseUrl: "http://viaplay777.librecat.org/baccarat.html",
+        cdnBaseUrl: "http://viaplay777.librecat.org/baccarat.html",
         surface: "storefront-renderer",
         enabledBetaFlags: ["web_pixels_async_pixel_refactor", "web_pixels_manager_performance_improvement"],
         webPixelsConfigList: [{
@@ -804,7 +804,7 @@
             "untranslatedTitle": "Default Title"
           }
         });
-      }, "http://viaplay777.librecat.org/baccarat-online.html", "browser", "0.0.411", "38cecb8bw83165fb4p6f715253m9cc56095", ["web_pixels_async_pixel_refactor", "web_pixels_manager_performance_improvement"]);
+      }, "http://viaplay777.librecat.org/baccarat.html", "browser", "0.0.411", "38cecb8bw83165fb4p6f715253m9cc56095", ["web_pixels_async_pixel_refactor", "web_pixels_manager_performance_improvement"]);
     </script>
     <script>
       window.ShopifyAnalytics = window.ShopifyAnalytics || {};
@@ -1009,7 +1009,7 @@
               "variant": null,
               "category": "Baccarat Online",
               "nonInteraction": true,
-              "referer": "http://viaplay777.librecat.org/baccarat-online.html"
+              "referer": "http://viaplay777.librecat.org/baccarat.html"
             });
           }
         });
@@ -1456,7 +1456,7 @@
           "@type": "Organization",
           "name": "Baccarat Online",
           "sameAs": ["", "", "", "", "", "", "", "", ""],
-          "url": "http://viaplay777.librecat.org/baccarat-online.html"
+          "url": "http://viaplay777.librecat.org/baccarat.html"
         }
 		
       </script>
@@ -1734,7 +1734,7 @@
                       <div class="share-button__fallback motion-reduce">
                         <div class="field">
                           <span id="ShareMessage-template--21781126349100__main" class="share-button__message hidden" role="status"></span>
-                          <input type="text" class="field__input" id="ShareUrl-template--21781126349100__main" value="http://viaplay777.librecat.org/baccarat-online.html" placeholder="Link" onclick="this.select();" readonly>
+                          <input type="text" class="field__input" id="ShareUrl-template--21781126349100__main" value="http://viaplay777.librecat.org/baccarat.html" placeholder="Link" onclick="this.select();" readonly>
                           <label class="field__label" for="ShareUrl-template--21781126349100__main">Link</label>
                         </div>
                         <button class="share-button__close hidden no-js-hidden">
@@ -1797,7 +1797,7 @@
                 "@context": "http://schema.org/",
                 "@type": "Product",
                 "name": "Situs Daftar Judi Baccarat Online Live Casino Bakarat 24 Jam",
-                "url": "http://viaplay777.librecat.org/baccarat-online.html",
+                "url": "http://viaplay777.librecat.org/baccarat.html",
                 "image": ["https:https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg2-wu2AN0SI-6NoGlO8yAXnxves8gdI9SqIS-iyuL4aPAZqgDSE5Qggdm4cuZszCC66O6dkq4LH4B_NLaWYSAs_Lq12HP4XPe3xanNi1p4lQG4ots_4snCpedsKORgRUq_REm4L_ftEBaYPf3gOkAOnNs9QnSaOxUeAzy48BTeu_TnTdmleoys3o_9yPMO/s600/hohocolang.jpg?v=1702199989\u0026width=1920"],
                 "description": "\n\nBaccarat adalah situs daftar judi bakarat online terpercaya di bandar promo bonus rollingan terbesar, mainkan baccarat live casino 24 jam disini.",
                 "brand": {
@@ -1809,7 +1809,7 @@
                   "availability": "http://schema.org/InStock",
                   "price": 2707008.0,
                   "priceCurrency": "IDR",
-                  "url": "http://viaplay777.librecat.org/baccarat-online.html?variant=47586450178348"
+                  "url": "http://viaplay777.librecat.org/baccarat.html?variant=47586450178348"
                 }]
               }
             </script>
